User Service, Repository and Endpoints added, Mapper configuration Added.

--- a/backend/users/src/main/resources/application.properties
+++ b/backend/users/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.contextPath=/api
 ##Mongodb
 spring.jpa.hibernate.ddl-auto=update
-spring.data.mongodb.uri=mongodb://root:pass12345@10.43.12.45:27017/friends?authSource=admin
+spring.data.mongodb.uri=mongodb://root:pass12345@10.43.12.45:27017/users?authSource=admin
 ##Exception handling
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
