Spring Actuator added to projecrt.

--- a/backend/users/src/main/resources/application.properties
+++ b/backend/users/src/main/resources/application.properties
@@ -1,11 +1,17 @@
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.servlet.contextPath=/api
 ##Mongodb
 spring.jpa.hibernate.ddl-auto=update
-spring.data.mongodb.uri=mongodb://root:pass12345@10.43.12.45:27017/users?authSource=admin
+spring.data.mongodb.uri=mongodb://root:pass12345@localhost:27017/users?authSource=admin
 ##Exception handling
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 ##Swagger UI
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-springfox.documentation.swagger-ui.base-url=documentation
 ##Swagger UI Link -> http://localhost:8080/api/documentation/swagger-ui/index.html#/
+springfox.documentation.swagger.v2.enabled=true
+springfox.documentation.swagger-ui.base-url=documentation
+##Actuator
+##Actuator Link -> http://localhost:9090/actuator
+management.endpoints.web.exposure.include=*
+management.server.port=9090
+management.endpoint.health.show-details=always
